fixed input=file stretching

--- a/src/sass/common/form.scss
+++ b/src/sass/common/form.scss
@@ -8,6 +8,8 @@ label {
 
 .form {
     width: 500px;
+    max-width: auto;
+
     margin: 0 auto;
     padding: 20px;
     background-color: #f0f0f0;
@@ -21,6 +23,10 @@ label {
         margin-bottom: 20px;
         border: 1px solid #ccc;
         border-radius: 4px;
+
+        &--file{
+            color: black;
+        }
     }
 
     &__radio{
@@ -43,6 +49,12 @@ label {
         border-radius: 8px;
         margin-bottom: 30px;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+
+        &__field{
+            &--file{
+                color:transparent;
+            }
+        }
     
     }
   }
@@ -91,5 +103,11 @@ label {
         margin-bottom: 30px;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 
+        &__field{
+            &--file{
+                color:transparent;
+            }
+        }
     }
+
 }
